# rust-rasterizer

./: .gitmodules  Cargo.toml  README.md
benches/: triangle_rasterization.rs
egui-backend/: Cargo.toml
egui-backend/examples/: code_editor.rs  hello_world.rs
egui-backend/src/: lib.rs
examples/: minecraft.rs  perspective_correct_interpolation.rs  scene.rs  shadows.rs
examples/models/: scene2.mtl
examples/scene/: Cargo.toml  config.toml
examples/scene/assets/blocks/: minecart.mtl
examples/scene/scenes/: minecraft.toml
examples/scene/src/: main.rs  shaders.rs
macros/: Cargo.toml
macros/src/: lib.rs
models/lost_empire/: lost_empire.mtl
models/steve/: steve.mtl
raster-egui/: Cargo.toml
raster-egui/examples/: code_editor.rs  hello_world.rs  page.rs
raster-egui/src/: lib.rs  painter.rs
scenes/: half_life.toml  minecraft.toml
src/: buf.rs  common.rs  config.rs  frag_shaders.rs  lib.rs  main.rs  math.rs  math_utils.rs  obj.rs  pipeline.rs  prim3d.rs  scene.rs  simd_config.rs  texture.rs  utils.rs  vec.rs  vert_buf.rs  world.rs
src/math/: mat.rs  mod.rs  utils.rs
src/prim2d/: lines.rs  mod.rs  simd.rs
src/prim3d/: common.rs  line.rs  mod.rs  scanline.rs  simd.rs  specialized.rs
src/shaders/: lit.rs  mod.rs  textured.rs
