[package]
name = "rasterization"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
anyhow = "1.0.71"
bumpalo = { version = "3.13.0", features = ["collections"] }
core_affinity = "0.8.0"
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
pixels = "0.12"
winit = "0.28"
macros.path = "macros"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "triangle_rasterization"
harness = false

[profile.bench]
debug = true

[profile.release]
opt-level = 3
debug = true
