[package]
name = "rasterization"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros", "raster-egui"]

[features]
default = []
performance-counters = []

[dependencies]
anyhow = "1.0.71"
bumpalo = { version = "3.13.0", features = ["collections"] }
core_affinity = "0.8.0"
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
pixels = "0.12"
winit = "0.28"
macros.path = "macros"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
notify = { version = "6.0.0", default-features = false }
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "triangle_rasterization"
harness = false

[profile.bench]
debug = true

[profile.release]
opt-level = 3
debug = true
