[package]
name = "rasterization"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros", "raster-egui", "examples/scene"]

[workspace.dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = "1"
pixels = "0.12"
winit = "0.28"
rayon = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.7"

[features]
default = []
performance-counters = []

[dependencies]
anyhow.workspace = true
pixels.workspace = true
winit.workspace = true
image.workspace = true
rayon.workspace = true
macros.path = "macros"
toml.workspace = true
serde.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
core_affinity = "0.8.0"
notify = { version = "6.0.0", default-features = false, features = ["macos_fsevent"] }

[[bench]]
name = "triangle_rasterization"
harness = false

[profile.bench]
debug = true

[profile.release]
opt-level = 3
debug = true
