[package]
name = "raster-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["event-loop"]
performance-counters = ["rasterization/performance-counters"]
event-loop = ["dep:pixels"]

[dependencies]
rasterization = { path = "..", default-features = false }
egui-winit = "0.22"
pixels = { version = "0.12", optional = true }
